--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <img src="k.png" alt="">
+        <img src="k.png" alt="logo">
 
         <ul class="navBar" id="nav">
             <li><a href="#home"> Home</a></li>
