--- a/Index.html
+++ b/Index.html
@@ -70,17 +70,17 @@
     <h2>PROJECTS</h2>
     <div class="procards">
         <div class="procard">
-            <div class="img"><img src="#.png" alt=""></div>
+            <div class="img"><img src=".png" alt=""></div>
             <h3>CopyWriting</h3>
             <p>CopyWriting Agency Website</p>
             <button> <a href="https://github.com/Amitsharma7300">Visit Link</a></button>
         </div>
         <div class="procard">
-            <div class="img"><img src=" #.png?auto=format&fit=crop" alt=""></div>
-            <h3>######</h3>
-            <p>@@@@@@@</p>
+            <div class="img"><img src="https://github.com/Amitsharma7300/Sliding-puzzle/blob/546e663de8330655cc9a837193575a96be37842e/puzzle.jpg"?auto=format&fit=crop" alt=""></div>
+            <h3>Puzzle</h3>
+            <p>Sliding Puzzle</p>
            
-            <button> <a href="">Visit Link</a></button>
+            <button> <a href="https://github.com/Amitsharma7300/Sliding-puzzle.git">Visit Link</a></button>
         </div><div class="procard">
             <div class="img"><img src=".jpg" alt=""></div>
             <h3>&&&&&</h3>
