--- a/Index.html
+++ b/Index.html
@@ -76,7 +76,7 @@
             <button> <a href="https://github.com/Amitsharma7300">Visit Link</a></button>
         </div>
         <div class="procard">
-            <div class="img"><img src="https://github.com/Amitsharma7300/Sliding-puzzle/blob/546e663de8330655cc9a837193575a96be37842e/puzzle.jpg"?auto=format&fit=crop" alt=""></div>
+            <div class="img"><img src="puzzle.jpg"?auto=format&fit=crop" alt=""></div>
             <h3>Puzzle</h3>
             <p>Sliding Puzzle</p>
            
