--- a/Index.html
+++ b/Index.html
@@ -96,7 +96,7 @@
 <footer class="footer" id="contact">
     <div class="footer-content">
       <h3 style="background-color: #127E78;">Amit sharma</h3>
-  <marquee> <p style="background-color: #127E78;">Contact With me through the following Links</p></marquee>
+   <p style="background-color: #127E78;"><marquee>Contact With me through the following Links</marquee></p>
       <div class="social-links" >
         <a href="https://x.com/AmitSharma_09?t=mQsSnOw5JWr2Rq1ocvQRcg&s=09" class="social-link">Twitter</a>
         <a href="https://instagram.com/_amitsharma73?igshid=bXl5NG5zM2hoeTAz" class="social-link">Instagram</a>
