--- a/Index.html
+++ b/Index.html
@@ -29,8 +29,8 @@
         <p>HI</p>
         <h1>I'm Amit Sharma</h1>
         <div class="des">
-            <p class="description">I'm frontend developer proficient in HTML, CSS, JavaScript, Bootstrap, and React.
-                I am learning full stack development. Creating captivating websites with a focus on user experience.</p>
+            <p class="description">I'm full stack developer proficient in HTML, CSS, JavaScript, tailwindcss,React.js, Express.js and Node.js.
+                I am learning generative AI using python, langchain,langgraph focused on building intelligent systems powered by Generative AI. Creating captivating websites with a focus on user experience.</p>
         </div>
     </main>
 
@@ -40,28 +40,45 @@
                 <h2>MY SKILLS</h2>
                 <p>I have following Skills!</p>
                 <div class="details">
-                    <span>HTML</span><span>90%</span>
+                    <span>React.js</span><span>90%</span>
                 </div>
                 <div class="bar">
                     <div id="html"></div>
                 </div>
                 <div class="details">
-                    <span>CSS</span><span>70%</span>
+                    <span>Express.js</span><span>70%</span>
                 </div>
                 <div class="bar">
                     <div id="css"></div>
                 </div>
                 <div class="details">
-                    <span>JavaScript</span><span>65%</span>
+                    <span>Node.js</span><span>65%</span>
                 </div>
                 <div class="bar">
                     <div id="js"></div>
                 </div>
                 <div class="details">
-                    <span>SQL</span><span>65%</span>
+                    <span>MongoDB</span><span>65%</span>
                 </div>
                 <div class="bar">
                     <div id="react"></div>
+                </div>
+                <div class="details">
+                    <span>Python</span><span>90%</span>
+                </div>
+                <div class="bar">
+                    <div id="html"></div>
+                    <div class="details">
+                    <span>Langchain</span><span>90%</span>
+                </div>
+                <div class="bar">
+                    <div id="html"></div>
+                </div>
+                    <div class="details">
+                    <span>Langgraph</span><span>90%</span>
+                </div>
+                <div class="bar">
+                    <div id="html"></div>
                 </div>
             </div>
         </div>
